# AI-Chatbot-Backend

./: README.md  pyproject.toml
backend/: main.py
backend/apis/v1/: route_auth.py  route_chat.py
backend/core/: config.py
backend/data/: knowledge.json
backend/db/: base.py  base_class.py  session.py
backend/db/models/: chat.py  user.py
backend/schemas/: schemas.py
backend/services/: rag_service.py  tasks.py
